--- a/connect.html
+++ b/connect.html
@@ -68,8 +68,9 @@
 </main>
 
 <footer>
-    <p>&copy; 2025 Tariro | Contact Page</p>
+    <p>&copy; 2025 Paul | Contact Page</p>
 </footer>
 
 </body>
 </html>
+
