--- a/connect.html
+++ b/connect.html
@@ -38,7 +38,7 @@
              <br><br>
             
             <p>Instagram:</p>
-            <a href="https://www.instagram.com/paulgwese09/">paulgwese09</a>
+            <a href="https://www.instagram.com/gwese.agaijr/">gwese.agaiijr</a>
 
             <br><br>
 
@@ -73,4 +73,5 @@
 
 </body>
 </html>
+
 
