Enhance external links with target and rel attributes
Updated links to open in a new tab and added rel attributes for security.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
             <h3>My School</h3>
             <div class="about-card">
     <div class="school-logo">
-        <img src="logo.jfif" alt="Kind Edwards Academy Logo">
+        <a href="https://kingedwardsacademy.net" target="_blank" rel="noopener noreferrer">
+            <img src="logo.jfif" alt="Kind Edwards Academy Logo">
+        </a>    
     </div>
             <p>
                 You can learn more about King Edwards Academy through the official website below.
             </p>
-            <a href="https://kingedwardsacademy.net">King Edwards Academy</a>
+            <a href="https://kingedwardsacademy.net" target="_blank" rel="noopener noreferrer">King Edwards Academy</a>
         </section>
 
         <!-- ABOUT SECTION -->
@@ -87,3 +89,4 @@
     </footer>
 </body>
 </html>
+
