Revise contact details and enhance link security
Updated contact information and added target attributes for links.

--- a/connect.html
+++ b/connect.html
@@ -28,50 +28,48 @@
 
         <div class="contact-box">
             <p>Email:</p>
-            <a href="mailto:paultazzer@gmail.com">paultazzer@gmail.com</a>
+            <a href="mailto:paultazzer@gmail.com" target="_blank" rel="noopener noreferrer">paultazzer@gmail.com</a>
 
             <br><br>
 
             <p>WhatsApp</p>
-            <a href="https://wa.me/263785644719">263785443324</a>
+            <a href="https://wa.me/263785443324" target="_blank" rel="noopener noreferrer">263785443324</a>
 
              <br><br>
             
             <p>Instagram:</p>
-            <a href="https://www.instagram.com/gwese.agaijr/">gwese.agaiijr</a>
+            <a href="https://www.instagram.com/paulgwese09/" target="_blank" rel="noopener noreferrer">paulgwese09</a>
 
             <br><br>
 
             <p>GitHub:</p>
-            <a href="https://github.com/PaulTazzer">github.com/PaulTazzer</a>
+            <a href="https://github.com/PaulTazzer" target="_blank" rel="noopener noreferrer">github.com/PaulTazzer</a>
 
             <br><br>
 
              <p>Dev.to</p>
-             <a href="https://dev.to/paulgwese">dev.paulgwese</a>
+             <a href="https://dev.to/paulgwese" target="_blank" rel="noopener noreferrer">dev.paulgwese</a>
 
              <br><br>
 
              <p>hashnode</p>
-             <a href="https://hashnode.com/@paulgwese">hasnode.com@paulgwese</a>
+             <a href="https://hashnode.com/@paulgwese" target="_blank" rel="noopener noreferrer">hashnode.com@paulgwese</a>
 
              <br><br>
 
              <p>Reddit</p>
-             <a href="https://www.reddit.com/user/paulgwese">reddit.u/paulgwese</a>
+             <a href="https://www.reddit.com/user/paulgwese" target="_blank" rel="noopener noreferrer">reddit.u/paulgwese</a>
             
              <br><br>
             <p>LinkedIn</p>
-            <a href="https://www.linkedin.com/in/paul-gwese-178435396">paul-gwese-178435396</a>
+            <a href="https://www.linkedin.com/in/paul-gwese-178435396" target="_blank" rel="noopener noreferrer">paul-gwese-178435396</a>
         </div>
     </section>
 </main>
 
 <footer>
-    <p>&copy; 2025 Paul | Contact Page</p>
+    <p>&copy; 2025 Tariro | Contact Page</p>
 </footer>
 
 </body>
 </html>
-
-
