--- a/connect.html
+++ b/connect.html
@@ -38,7 +38,7 @@
              <br><br>
             
             <p>Instagram:</p>
-            <a href="https://www.instagram.com/paulgwese09/" target="_blank" rel="noopener noreferrer">paulgwese09</a>
+            <a href="https://www.instagram.com/gwese.agaijr/" target="_blank" rel="noopener noreferrer">gwese.agaijr</a>
 
             <br><br>
 
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
