Fix HTML structure and add project details

--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
 
             <p>I have a lot of projects but I feel like sharing these ones. Visit my GitHub account to see most of my projects.
                 <p>GitHub:</p>
-            <a href="https://github.com/PaulTazzer">github.com/PaulTazzer</a>
+            <a href="https://github.com/PaulTazzer target="_blank" rel="noopener noreferrer ">github.com/PaulTazzer</a>
 
             </p>
 
@@ -81,4 +81,5 @@
         <footer>
         <p>&copy; 2025 Paul | Projects Page</p>
     </footer>
+
     </main>
