Fix HTML structure and update project descriptions

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,9 @@
 
             <article class="project" id="project-2">
                 <h3>4. Car Services Website For My Friend</h3>
-                <img src="Screenshot 2025-11-20 080435.png" alt="Screenshot of the project" class="project-visual">
+                <a href="https://zvinavashe-auto-work.vercel.app" target="_blank" rel="noopener noreferrer">
+                    <img src="Screenshot 2025-11-20 080435.png" alt="Screenshot of the project" class="project-visual">
+                </a>
                 <p>Creating a car services website for my friend focused on building a clean layout that clearly shows the services offered and makes it easy for customers to get information. I learned how to organize content so pricing, service options, and contact details are simple to find. The project helped me create a professional and easy-to-use site for a small business.</p>
             </article>
             
@@ -82,5 +84,6 @@
     </footer>
 
     </main>
+
 
 
