--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,7 @@
 
             <article class="project" id="project-2">
                 <h3>4. Car Services Website For My Friend</h3>
+                <p>Tap the image to view project</p>
                 <a href="https://zvinavashe-auto-work.vercel.app" target="_blank" rel="noopener noreferrer">
                     <img src="Screenshot 2025-11-20 080435.png" alt="Screenshot of the project" class="project-visual">
                 </a>
@@ -66,7 +67,10 @@
 
              <article class="project" id="project-2">
                 <h3>4. Quote Generator</h3>
-                <img src="Screenshot 2025-11-20 080850.png" alt="Screenshot of the project" class="project-visual">
+                 <p>Tap the image to view project</p>
+                 <a href= "https://generate-quote25.vercel.app" target="blank" rel="noopener noreferrer">
+                    <img src="Screenshot 2025-11-20 080850.png" alt="Screenshot of the project" class="project-visual">
+                </a>
                 <p>Building a quote generator helped me practice creating simple, interactive features and added JavaScript to my skill set. I learned how to make dynamic content that updates instantly and keeps the page engaging. This project strengthened my ability to create small but functional tools that improve user experience.</p>
             </article>     
             
@@ -84,6 +88,7 @@
     </footer>
 
     </main>
+
 
 
 
