--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,11 @@
             
             <article class="project" id="project-2">
                 <h3>2. My first Website</h3>
+                <p>Tap the image to view project</p>
+                <a hrel="https://streamline-booking-2.vercel.app" target="blank" rel="noopener noreferrer">
                 <img src="streamline booking.png" alt="Screenshot of the project" class="project-visual">
-                <p>Building a simple design for a simple hotel booking page in HTML and CSS had two main goals: to create a good-looking and functional interface, and to show I could structure a complex form correctly. The key lesson was using Flexbox and CSS Grid to make the layout look great on all devices, and using semantic HTML to correctly build the booking form, image galleries, and information sections. This project taught me how to make a complete, high-quality, and responsive frontend design.</p>
+                    <p>Building a simple design for a simple hotel booking page in HTML and CSS had two main goals: to create a good-looking and functional interface, and to show I could structure a complex form correctly. The key lesson was using Flexbox and CSS Grid to make the layout look great on all devices, and using semantic HTML to correctly build the booking form, image galleries, and information sections. This project taught me how to make a complete, high-quality, and responsive frontend design.</p>
+                </a> 
             </article>
 
             <br><br>
@@ -88,6 +91,7 @@
     </footer>
 
     </main>
+
 
 
 
