Revise projects.html for improved content and structure
Updated the projects page to enhance project descriptions and layout.

--- a/projects.html
+++ b/projects.html
@@ -39,14 +39,23 @@
             <br><br>
             
             <article class="project" id="project-2">
-                <h3>2. My first Website</h3>
-                <p>Tap the image to view project</p>
-                <a href="https://streamline-booking-2.vercel.app" target="blank" rel="noopener noreferrer">
-                    <img src="streamline booking.png" alt="Screenshot of the project" class="project-visual">
-                </a>    
-                    <p>Building a simple design for a simple hotel booking page in HTML and CSS had two main goals: to create a good-looking and functional interface, and to show I could structure a complex form correctly. The key lesson was using Flexbox and CSS Grid to make the layout look great on all devices, and using semantic HTML to correctly build the booking form, image galleries, and information sections. This project taught me how to make a complete, high-quality, and responsive frontend design.</p>
-                 
-            </article>
+    <h3>2. My first Website</h3>
+
+    <figure>
+        <a href="https://streamline-booking-2.vercel.app" target="_blank" rel="noopener noreferrer">
+            <img src="image_2025-11-21_191056858.png" alt="Screenshot of the project" class="project-visual">
+        </a>
+        <figcaption>Tap the image to view project</figcaption>
+    </figure>
+
+    <p>
+        Building a simple design for a simple hotel booking page in HTML and CSS had two main goals: 
+        to create a good-looking and functional interface, and to show I could structure a complex form correctly. 
+        The key lesson was using Flexbox and CSS Grid to make the layout look great on all devices, 
+        and using semantic HTML to correctly build the booking form, image galleries, and information sections. 
+        This project taught me how to make a complete, high-quality, and responsive frontend design.
+    </p>
+</article>
 
             <br><br>
 
@@ -92,6 +101,7 @@
     </footer>
 
     </main>
+
 
 
 
