--- a/connect.html
+++ b/connect.html
@@ -33,8 +33,13 @@
             <a href="https://wa.me/263785443324" target="_blank" rel="noopener noreferrer">263785443324</a>
 
              <br><br>
-            
 
+             <p>Instagram:</p>
+            <a href="https://www.instagram.com/gwese.agaijr/" target="_blank" rel="noopener noreferrer">gwese.agaijr</a>
+
+            <br><br>
+
+            
             <p>GitHub:</p>
             <a href="https://github.com/PaulTazzer" target="_blank" rel="noopener noreferrer">github.com/PaulTazzer</a>
 
@@ -45,7 +50,7 @@
 
              <br><br>
 
-             <p>hashnode</p>
+             <p>Hashnode</p>
              <a href="https://hashnode.com/@paulgwese" target="_blank" rel="noopener noreferrer">hashnode.com@paulgwese</a>
 
              <br><br>
@@ -66,6 +71,7 @@
 
 </body>
 </html>
+
 
 
 
